added bash file for setup installation

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 env
 C:\Users\atulkumarrai\PycharmProjects\Ineuron practice\Ineuron_practice\HandDetectionProjects\env
 Painting_images
+__pycache__
